--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
 
         <!-----------------------------------sliding-scroll------------------------------------------>
-        <div class="main">
+        <!-- <div class="main">
             <div id="section2" class="top">
                 <video src="img/Red Background With Screen Overlay Of Scratches Dust And Glare.mp4" autoplay muted
                     loop></video>
@@ -309,7 +309,7 @@
                         <video src="img/Red Background With Screen Overlay Of Scratches Dust And Glare.mp4" autoplay
                             muted loop></video>
                         <h1 class="right-h-1">Wicked</h1>
-                        <!-- <h1 class="right-h-2"></h1> -->
+                        
                     </div>
                     <div class="center">
                         <div class="main-horizontal-vertical">
@@ -351,7 +351,7 @@
                         <video src="img/Red Background With Screen Overlay Of Scratches Dust And Glare.mp4" autoplay
                             muted loop></video>
                         <h1 class="left-h-1">wicked</h1>
-                        <!-- <h1 class="left-h-2">sound</h1> -->
+                       
                     </div>
                 </div>
 
@@ -361,7 +361,7 @@
                 <video src="img/Red Background With Screen Overlay Of Scratches Dust And Glare.mp4" autoplay muted
                     loop></video>
             </div>
-        </div>
+        </div> -->
 
         <!-----------------------------------sliding-scroll------------------------------------------>
 
