removde scroll slider

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="sample_packs_media_queries.css">
 
-    <link rel="stylesheet" href="scroll_slider.css">
+    <!-- <link rel="stylesheet" href="scroll_slider.css"> -->
 
     <link rel="stylesheet" href="animated_scroll.css">
 
@@ -267,15 +267,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
-
-
-
-
-
                 </section>
             </div>
 
@@ -1035,7 +1026,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
-    <script src="js/scroll_slider.js"></script>
+    <!-- <script src="js/scroll_slider.js"></script> -->
 
     <script src="js/sample_packs_script.js"></script>
 
